# mulle-objc-compat

./: .gitignore  .touch  .travis.yml  CMakeLists.txt  README.md  RELEASENOTES.md  clib.json  mulle-objc-compat.code-workspace  mulle-objc-compat.sublime-project  package.json
.github/workflows/: mulle-sde-ci.yml  semgrep.yml
.mulle-env/share/: environment-project.sh  environment-share.sh
.mulle-sde/etc/match.d/: 80-source--standalone-sources
.mulle-sde/share/: extension
.mulle-sourcetree/etc/: config
.mulle/etc/env/: environment-global.sh  environment-host-terodde.sh  environment-project.sh
.mulle/etc/match/match.d/: 60-asset--images  60-asset--sounds  60-asset--toc  65-asset--documents  75-source--objc-headers
.mulle/etc/project/: version-info.sh
.mulle/etc/sourcetree/: config
.mulle/share/env/: motd
.mulle/share/sde/: extension
.mulle/share/sourcetree/: config
.travis.d/: before_install
asset/dox/: TOC.md
assets/dox/: TOC.md
cmake/: Headers.cmake  HeadersAndSources.cmake  _Dependencies.cmake  _Headers.cmake  _Libraries.cmake  _Sources.cmake
cmake/reflect/: _Dependencies.cmake  _Headers.cmake  _Sources.cmake
cmake/share/: CreateDepsIncObjC.cmake  CreateLoaderIncObjC.cmake  Environment.cmake  FallbackEnvironment.cmake  LinkManifestC.cmake  PreInstall.cmake  StandaloneC.cmake  StartupC.cmake
cola/: description.md.bud  info.md.bud  properties.plist
src/: _mulle-objc-compat-import-private.h  _mulle-objc-compat-import.h  _mulle-objc-compat-include-private.h  _mulle-objc-compat-include.h  _mulle-objc-compatruntime-include-private.h  _mulle-objc-compatruntime-include.h  class.c  class.h  class.m  import-private.h  import.h  include-private.h  include.h  ivar.h  method.c  method.h  method.m  mulle-objc-compat-standalone.m  mulle-objc-compat.h  mulle-objc-compat.m  ns-objc-type.h  object.c  object.h  object.m  property.c  property.h  property.m  protocol.c  protocol.h  protocol.m  runtime.c  runtime.h  runtime.m  selector.c  selector.h  selector.m
src/generic/: include.h
src/objc/: Protocol.h  message.h  objc-abi.h  objc-api.h  objc-auto.h  objc-cache.h  objc-class.h  objc-config.h  objc-env.h  objc-exception.h  objc-gdb.h  objc-internal.h  objc-runtime.h  objc-sync.h  objc.h  runtime.h
src/reflect/: _mulle-objc-compat-import-private.h  _mulle-objc-compat-import.h  _mulle-objc-compat-include-private.h  _mulle-objc-compat-include.h
test/: run-test  test.h  testroot.i
test/.mulle-sde/share/: mulle-test
test/.mulle-sourcetree/etc/: config
test/.mulle/etc/env/: environment-host-ci-prerelease.sh  environment-host-terodde.sh  environment-host-travis-ci-prerelease.sh
test/.mulle/etc/sourcetree/: config
test/.mulle/share/env/: environment-extension.sh  environment-plugin.sh  environment-project.sh
test/.mulle/share/sde/: mulle-test
test/.mulle/share/sourcetree/: config
test/01_selector/: ignoredSelector.m
test/02_ivar/: ivar.m
test/03_method/: addMethod.m  getMethod.m  methodArgs.m  methodListSize.m
test/04_property/: accessors2.m  property.m  propertyDesc.m
test/05_protocol/: addProtocol.m  protocol.m
test/06_category/: category.m
test/07_class/: classgetclass.m  classname.m  classpair.m  classversion.m  copyIvarList.m  copyMethodList.m  copyPropertyList.m  initialize.m  load.m
test/08_object/: createInstance.m  objectCopy.m
test/0_api/: nilAPIArgs.m
test/11_foreach/: foreach.m
test/1_class/: classgetclass.m
test/3_method/: methodListSize.m
